Fixed right pane from jumping on change.

--- a/main.css
+++ b/main.css
@@ -754,7 +754,6 @@ button,
   word-break: break-word;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 .items-list .hide {
   display: none;
@@ -1007,66 +1006,66 @@ form input.number {
 }
 @keyframes glitch-anim {
   0% {
-    clip: rect(72px, 9999px, 111px, 0);
+    clip: rect(46px, 9999px, 23px, 0);
   }
   10% {
-    clip: rect(69px, 9999px, 43px, 0);
+    clip: rect(132px, 9999px, 136px, 0);
   }
   20% {
-    clip: rect(123px, 9999px, 109px, 0);
+    clip: rect(101px, 9999px, 49px, 0);
   }
   30% {
-    clip: rect(23px, 9999px, 11px, 0);
+    clip: rect(77px, 9999px, 28px, 0);
   }
   40% {
-    clip: rect(25px, 9999px, 125px, 0);
+    clip: rect(54px, 9999px, 6px, 0);
   }
   50% {
-    clip: rect(129px, 9999px, 133px, 0);
+    clip: rect(98px, 9999px, 90px, 0);
   }
   60% {
-    clip: rect(118px, 9999px, 1px, 0);
+    clip: rect(61px, 9999px, 37px, 0);
   }
   70% {
-    clip: rect(53px, 9999px, 4px, 0);
+    clip: rect(97px, 9999px, 116px, 0);
   }
   80% {
-    clip: rect(46px, 9999px, 110px, 0);
+    clip: rect(113px, 9999px, 139px, 0);
   }
   90% {
-    clip: rect(38px, 9999px, 142px, 0);
+    clip: rect(55px, 9999px, 77px, 0);
   }
   100% {
-    clip: rect(29px, 9999px, 139px, 0);
+    clip: rect(2px, 9999px, 114px, 0);
   }
 }
 @keyframes glitch-anim-2 {
   20% {
-    clip: rect(92px, 9999px, 148px, 0);
+    clip: rect(72px, 9999px, 44px, 0);
   }
   30% {
-    clip: rect(59px, 9999px, 64px, 0);
+    clip: rect(102px, 9999px, 57px, 0);
   }
   40% {
-    clip: rect(113px, 9999px, 62px, 0);
+    clip: rect(137px, 9999px, 135px, 0);
   }
   50% {
-    clip: rect(92px, 9999px, 19px, 0);
+    clip: rect(116px, 9999px, 28px, 0);
   }
   60% {
-    clip: rect(10px, 9999px, 135px, 0);
+    clip: rect(92px, 9999px, 61px, 0);
   }
   70% {
-    clip: rect(69px, 9999px, 102px, 0);
+    clip: rect(108px, 9999px, 111px, 0);
   }
   80% {
-    clip: rect(35px, 9999px, 89px, 0);
+    clip: rect(94px, 9999px, 93px, 0);
   }
   90% {
-    clip: rect(111px, 9999px, 17px, 0);
+    clip: rect(70px, 9999px, 20px, 0);
   }
   100% {
-    clip: rect(24px, 9999px, 66px, 0);
+    clip: rect(85px, 9999px, 149px, 0);
   }
 }
 .window-app .window-content {
